--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,8 @@
 doctype html
-html
+html(lang="fr")
   head
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
