--- a/views/index.pug
+++ b/views/index.pug
@@ -1,44 +1,5 @@
 extends layout
 
 block content
-  header
-    div
-      div
-        img(src="/images/logo.png" alt="")
-        h1 PIZZAHUTTE
-        h2 Pizzéria bio végane khirguistane
-      ul 
-        li Panier 
-        li Mon compte
-    nav
-      ul
-        li Menus  
-        li Entrées  
-        li Plats  
-        li Pizzas  
-        li Desserts  
-        li boissons
-  main 
-    h2 Dernières pizzas
-    ul
-      li 
-        img(src="/images/pizza_vegetalienne.jpg", alt="")
-        ul 
-          li 
-            button Ajouter au panier 
-            button Retirer
-      li 
-        img(src="/images/pizza-piments.jpg", alt="")
-        ul 
-          li 
-            button Ajouter au panier 
-            button Retirer
-      li 
-        img(src="/images/pizza_khiguistanaise.jpg", alt="")
-        ul 
-          li 
-            button Ajouter au panier 
-            button Retirer
-  script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous")
-      
-      
+  h1= title
+  p Welcome to #{title}
