--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/bootstrap.min.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+
+
   body
     block content
