--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/css/bootstrap.min.css')
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css.map')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css.map')
+    
+    link(rel='javascripts', href='/javascripts/bootstrap.min.js')
+    
   body
     block content
