Ajout de la fonction launchClientBrowser

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,18 @@
+h1 {
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: xx-large;
+  color: white;
+}
+
+* {
+  background-color: black;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
 
 a {
   color: #00B7FF;
