--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,10 @@
 extends layout
 block content
   .container.text-center
-    img(src="./images/logos/mochizuki_logo.png" class="text-center")
+    img(src="./images/logos/logo.png" class="text-center mb-2")
+    h1 PIZZAHUTTE
     .row.align-items-center
-      h1.col PIZZAHUTTE
+    
     .row.mt-3
     form
       .mb-3
