--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,12 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css.map')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css.map')
-    
-    link(rel='javascripts', href='/javascripts/bootstrap.min.js')
+    link(rel='stylesheet',    href='/stylesheets/style.css')
+    link(rel="stylesheet",    href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap")
+    link(rel='stylesheet',    href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet',    href='/stylesheets/bootstrap.css.map')
+    link(rel='stylesheet',    href='/stylesheets/bootstrap.min.css.map')
+    link(rel='javascripts',   href='/javascripts/bootstrap.min.js')
+    link(rel="shortcut icon", href="/images/favicon.ico")
     
   body
     block content
