Menu de navigation fonctionnel

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
-block content
+block admin-authentification
   .container.text-center
-    img(src="./images/logos/logo.png" class="text-center mb-2")
+    img(src="./images/logos/logo_white_no_lines.png" class="text-center mb-2")
     h1 PIZZAHUTTE
     .row.align-items-center
     .row.mt-3
