--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ html
     link(rel='javascripts',   href='/javascripts/bootstrap.min.js')
     link(rel="shortcut icon", href="/images/favicon.ico")
   body
+  block forgot
   block admin-authentification
     header
       .container-fluid.border.border-success.text-center
